syntax = "proto3";

package protocol;

// Types de base
message Address {
  string country = 1;
  string city = 2;
  string street = 3;
  string number = 4;
  string location_hint = 5;
  GPSPosition gps_position = 6;
}

message Header {
  int32 code = 1;
  string message =  2;
}

message GPSPosition {
  double latitude = 1;
  double longitude = 2;
}

message Room {
  string id = 1;
  int32 beds = 2;
  double base_price = 3;
}

message Offer {
  string id = 1;
  Room room = 2;
  string available_date = 3;
  double price = 4;
}

message Customer {
  string first_name = 1;
  string last_name = 2;
  CreditCard credit_card = 3;
}

message CreditCard {
  string number = 1;
  string expiration_date = 2;
  string cvv = 3;
}
